tests/output/self_hosted/python_listcomp_error.txt
tests/python_listcomp_error.oomph:5: error: should be ']'

    print([x+1 foreach x of foo])
               ^^^^^^^

